fix recommended videos section overlap

--- a/app/assets/stylesheets/videos/show.scss
+++ b/app/assets/stylesheets/videos/show.scss
@@ -80,8 +80,7 @@ $show-video-width: 1300px;
   flex: 1;
   margin: 0 0.5em;
   flex-direction: column;
-  max-width: 500px;
-  min-width: 450px;
+  width: 100%;
 }
 
 @media (max-width: 700px) {
